--- a/style.css
+++ b/style.css
@@ -91,15 +91,36 @@ h3
 	background-color:#2084c2;
 }
 
+.wisielec
+{
+	font-size:54px;
+	padding:5px;
+	color:white;
+	text-align:center;
+	width:50px;
+	height:60px;
+	background-color:black;
+	float:left;
+	border-radius:10px;
+	margin-bottom:20px;
+	font-family:"mistral";
+	margin-left:12px;
+}
+
+.wisielec:hover
+{
+	cursor:pointer;
+	background-color:#222222;
+}
 #login
 {
-	width:820px;
+	
+	width:750px;
 	font-size:14px;
 	text-align:right;
 	padding:10px;
 	float:left;
 	text-decoration:none;
-	
 }
 
 #menu
@@ -279,6 +300,8 @@ a.menulink
 	letter-spacing:2px;
 	padding:10px;
 	background-color:#bbbbbb;
+	text-decoration:none;
+	color:black;
 }
 
 .option2:hover
@@ -432,6 +455,22 @@ a.menulink
 	min-height:100px;
 	font-size:16px;
 	border-top: 1px solid black;
-	
+	background-color:#EFEFEF;
+	margin-bottom:20px;
+}
+
+.przepisuser:hover
+{
+	background-color:#dedede;
+}
+
+.przepisszukaj
+{
+	width:610px;
+
+	min-height:100px;
+	font-size:16px;
+	border-top: 1px solid black;
+	background-color:#EFEFEF;
 	margin-bottom:20px;
 }
